# wdwm

./: .gitignore  CMakeLists.txt  Makefile  config.def.h  config.mk  wdwm.1  wdwm.c
